# product-reader-ai

./: .env.example  CLAUDE.md  README.md  agent.py  context.py  model_factory.py  product_links_agent.py  product_page_agent.py  profile_writer_agent.py  prompts.py  pyproject.toml  schema_agent.py  schemas.py  scraper_agent.py  state.py  test_writer_agent.py  validation_agent.py
tests/: test_agent.py
